--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.4.5",
-    "vuetify": "^2.2.11"
+    "vuelidate": "^0.7.5",
+    "vuetify": "^2.2.11",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
