--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "dependencies": {
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
     "vue": "^2.6.11",
+    "vue-clamp": "^0.3.1",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3.4.5",
     "vuelidate": "^0.7.5",
     "vuetify": "^2.2.11",
