--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "moment": "^2.29.1",
     "qrcode": "^1.4.4",
+    "socket.io-client": "^3.0.4",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.1",
     "vue-clamp": "^0.3.1",
